Fix headerbar z-index

--- a/Global/global.css
+++ b/Global/global.css
@@ -27,6 +27,7 @@ h2 {
   	right: 0;
 	left: 0;
 	background: rgb(255, 230, 0);
+	z-index: 1000;
 }
 
 .navigation-bar a {	
